Update documentation and install script

--- a/hear.1.html
+++ b/hear.1.html
@@ -76,12 +76,12 @@
 
 <b>SEE ALSO</b>
 
-     say(1) afplay(1)
+     afplay(1) say(1)
 
 <b>AUTHORS</b>
 
      Sveinbjorn Thordarson &lt;sveinbjorn@sveinbjorn.org&gt;
 
-Darwin                         November 8, 2025                         Darwin
+Darwin                         November 9, 2025                         Darwin
 </font></pre>
 </body></html>
