--- a/hear.1.html
+++ b/hear.1.html
@@ -13,9 +13,9 @@
 
      <b>hear</b> is a command line interface for the built-in speech recognition
      capabilities in macOS. It supports transcription of both audio files and
-     microphone input. If no input file is provided, the default behaviour is
-     to transcribe from the default audio input device, typically the
-     microphone.
+     data from audio input devices. If no input file is provided, the default
+     behaviour is to transcribe from the default audio input device, typically
+     the microphone.
 
      The following flags are supported:
 
@@ -76,12 +76,12 @@
 
 <b>SEE ALSO</b>
 
-     afplay(1) say(1)
+     afplay(1), say(1)
 
 <b>AUTHORS</b>
 
      Sveinbjorn Thordarson &lt;sveinbjorn@sveinbjorn.org&gt;
 
-Darwin                         November 9, 2025                         Darwin
+Darwin                         November 21, 2025                        Darwin
 </font></pre>
 </body></html>
